--- a/readme
+++ b/readme
@@ -2,3 +2,4 @@
 ##screenshots
 ![Screenshot 2023-12-20 121136](https://github.com/Magicaryn/portfolio/assets/150097400/9fbb23ec-b27b-4765-8a26-83a1859e79da)
 ![Screenshot 2023-12-20 121136](https://github.com/Magicaryn/portfolio/assets/150097400/9fbb23ec-b27b-4765-8a26-83a1859e79da)
+[Screenshot 2023-12-20 121136](https://github.com/Magicaryn/portfolio/assets/150097400/9fbb23ec-b27b-4765-8a26-83a1859e79da)
